--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
+    "@types/styled-components": "^5.1.26",
     "@types/wavesurfer.js": "^6.0.3",
     "eslint-plugin-react-hooks": "^4.6.0"
   }
