--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.13",
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.26",
     "@types/wavesurfer.js": "^6.0.3",
